RESOLVED FIXED76254
REGRESSION: svg/custom/use-instanceRoot-event-listeners.xhtml & svg/custom/pointer-events-invalid-fill.svg broken on the Bots
https://bugs.webkit.org/show_bug.cgi?id=76254
Summary REGRESSION: svg/custom/use-instanceRoot-event-listeners.xhtml & svg/custom/po...
Nikolas Zimmermann
Reported 2012-01-13 01:34:08 PST
REGRESSION: svg/custom/use-instanceRoot-event-listeners.xhtml & svg/custom/pointer-events-invalid-fill.svg broken on the Bots. It broke between r103854 and r103869. Will bisect.
Attachments
Patch (3.40 KB, patch)
2012-01-13 12:53 PST, mitz
andersca: review+
Nikolas Zimmermann
Comment 1 2012-01-13 01:41:49 PST
Error on SL bot first appears here: http://build.webkit.org/old-results/SnowLeopard%20Intel%20Debug%20(Tests)/r103867%20(4059)/results.html Wasn't present yet in the previous build: http://build.webkit.org/old-results/SnowLeopard%20Intel%20Debug%20(Tests)/r103864%20(4058)/results.html. Either: - http://trac.webkit.org/changeset/103865 (document collections change) - http://trac.webkit.org/changeset/103866 (MiniBrowser change, seems not guilty) - http://trac.webkit.org/changeset/103867 (cursor changes) It's not obvious who is guilty, I'll look for another bot with results in that revision range.
Nikolas Zimmermann
Comment 2 2012-01-13 01:47:10 PST
Aha, both tests use onmouesover handlers, so Dans r103867 is likely the cause. CC'ing Dan.
Nikolas Zimmermann
Comment 3 2012-01-13 02:11:40 PST
I revert r103867 locally, and the problems are gone. Reopening the bug associated with r103867.
mitz
Comment 4 2012-01-13 07:41:37 PST
svg/custom/pointer-events-invalid-fill.svg appears to be relying on a mouseMove event firing late enough after the test loaded (perhaps after all subresources loaded). It used to get that late-firing event as a result of the timer in WebHTMLView.mm (rather than as a result of its own call to eventSender.mouseMoveTo()). It can be made to pass by delaying the call to eventSender.mouseMoveTo() with a timer. If this is about the font resource, then forcing layout before the load event fires should work as well.
mitz
Comment 5 2012-01-13 11:42:44 PST
The root cause appears to be that the document doesn’t reliably finish loading in the API sense, following the changes in <http://trac.webkit.org/r101858>.
mitz
Comment 6 2012-01-13 11:44:04 PST
…which is the same issue indicated in bug 73688 comment #7.
mitz
Comment 7 2012-01-13 12:07:57 PST
(In reply to comment #5) > The root cause appears to be that the document doesn’t reliably finish loading in the API sense, following the changes in <http://trac.webkit.org/r101858>. Actually, that issue existed prior to r101858.
mitz
Comment 8 2012-01-13 12:53:28 PST
mitz
Comment 9 2012-01-13 15:58:48 PST
Nikolas Zimmermann
Comment 10 2012-01-14 04:31:18 PST
(In reply to comment #9) > Fixed in <http://trac.webkit.org/r105005>. Thanks for the quick fix Dan!
Note You need to log in before you can comment on or make changes to this bug.