REGRESSION: svg/custom/use-instanceRoot-event-listeners.xhtml & svg/custom/pointer-events-invalid-fill.svg broken on the Bots https://bugs.webkit.org/show_bug.cgi?id=76254

Reviewed by Anders Carlsson.

Source/WebCore:

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::beginLoadTimerFired): Added a call to
CachedResourceLoader::loadDone() after decrementing the request count. This allows the
frame loader to see that the request count is zero and dispatch didFinishLoad.

LayoutTests:

* svg/custom/pointer-events-invalid-fill.svg: Force layout before sending a mouse event.
Otherwise, the WebHTMLView may have zero size, causing the hit test in
-[EventSendingController mouseMoveToX:Y:] to yield the clip view and the event to go nowhere.
* svg/custom/resources/use-instanceRoot-event-listeners.js: Ditto.



Canonical link: https://commits.webkit.org/93140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105005 268f45cc-cd09-0410-ab3c-d52691b4dbfc